added printcore from kliment/printrun

--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -5,6 +5,9 @@
         <input type="file" name="file"><br /><br />
         <input type="submit" value="Upload"> <ul class="entries">
       </form>
+  <div id="printer">
+      <input type="button" value="Connect" OnClick="connect()">
+  </div>
   {% endif %}
 
   {% for entry in entries %}
