--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -6,7 +6,7 @@
         <input type="submit" value="Upload"> <ul class="entries">
       </form>
   <div id="printer">
-      <input type="button" value="Connect" OnClick="connect()">
+      <input type="button" value="Connect" onclick="location.href='_connect.html';">
   </div>
   {% endif %}
 
