--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,6 @@
 <!doctype html> <title>Printero</title> <link rel="stylesheet" 
 type="text/css" href="{{ url_for('static', filename='style.css') }}"> 
+<script type=text/javascript src="{{url_for('static', filename='jquery-3.1.1.min.js') }}"></script>
 <div class="page">
 
   <h1>Printero</h1>
